fix(sheet): column resizing
* add tests
* number of COL-tags match number of TH/TD tags
* scrollbar filler is now a <DIV> instead of an additional <th> tag. The header and the body have now the same amount of COL/TH/TD tags, which makes it easier to keep the size of header and body the same.
* add CSS classes "tobago-row-filler" and "tobago-behavior-container" to COL/TH/TD tags. This makes it clearer what the last two COLs are for.
* replace deprecated <col> width-attribute with CSS width attribute from <style> tag.
* initialization of column width no longer needed in TypeScript; so this is removed
* refactor TypeScript column resizing
* add an observer to show/hide scrollbar filler, depending on whether the sheet body has a scrollbar or not
* adjust UnitTests

Issue: TOBAGO-2374, TOBAGO-2378, TOBAGO-2379

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -1625,8 +1625,6 @@ tobago-separator {
   }
 }
 
-/* sheet -------------------------------------------------------------- */
-
 tobago-sheet {
   display: flex;
   flex-direction: column;
@@ -1635,7 +1633,11 @@ tobago-sheet {
   .tobago-expanded {
   }
 
+  .tobago-row-filler {
+  }
+
   header {
+    display: flex;
     overflow-x: hidden;
     flex-shrink: 0; //if "column" attribute used: header must remain same height (fix overflow hidden)
 
@@ -1645,6 +1647,23 @@ tobago-sheet {
       th {
         position: relative;
         overflow: hidden;
+      }
+    }
+
+    .tobago-scrollbar-filler {
+      display: none;
+      background-color: var(--bs-table-bg);
+      border-width: 0;
+      border-style: solid;
+      border-color: var(--bs-table-border-color);
+      border-bottom-width: var(--bs-border-width);
+
+      &.tobago-show {
+        display: table;
+      }
+
+      &.table-bordered {
+        border-width: var(--bs-border-width);
       }
     }
   }
@@ -1719,10 +1738,6 @@ tobago-sheet {
       td {
         overflow: hidden;
 
-        &.tobago-behavior-container {
-          display: none;
-        }
-
         @include treeNodeMarginLeftLevel();
 
         > input.tobago-selected {
@@ -1745,6 +1760,12 @@ tobago-sheet {
           }
         }
       }
+    }
+  }
+
+  header th, .tobago-body th, .tobago-body td {
+    &.tobago-behavior-container {
+      display: none;
     }
   }
 
